--- a/style.css
+++ b/style.css
@@ -50,3 +50,16 @@
 .entities {
   position: relative;
 }
+.logo {
+  width: 60%;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  left: 50%;
+  transition: opacity 0.6s;
+}
+
+.logo--hidden {
+  opacity: 0;
+}
